--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <nav>
+      <ul class='ul-style'>
+        <li class='list-style'><a id='anchor-nav' href="#">Home</a></li>
+        <li class='list-style'><a id='anchor-nav' href="#">Works</a></li>
+        <li class='list-style'><a id='anchor-nav' href="#">Contact</a></li>
+        <li class='list-style'><a id='anchor-nav' href="#">About</a></li>
+      </ul>
+    </nav>
     <title> My Portfolio </title>
+    <link rel='stylesheet' href='index.css'/>
   </head>
   <body>
     <h1> Welcome to my Portfolio!! </h1>
@@ -19,7 +28,6 @@
       <li> CS 142's music playlist lab </li>
       <li> Some bootstrap </li>
     </ol>
-    <p> </p>
     <p> Some things I will be working on in the future: </p>
     <ol>
       <li> The maintainance of <a href="mentalogue.my"> this </a> website </li>
