--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <body>
     <h1> Welcome to my Portfolio!! </h1>
     <h2> Here is a display of all my work thus far! </h2>
-    <br/>
+  <div class='content-1'>
     <h3> About </h3>
     <p> You are probably wondering why a chemical engineering student wants to learn web dev...
       well that is a great question. I guess I just like learning about everything :)
     </p>
-    <hr/>
+  </div>
+  <div class='content-2'>
     <h3> Projects </h3>
     <p> Some things I've worked on w/ regards to coding: </p>
     <ol>
@@ -32,7 +33,8 @@
     <ol>
       <li> The maintainance of <a href="mentalogue.my"> this </a> website </li>
     </ol>
-    <hr>
+  </div>
+  <div class='content-3'>
     <h3>Experience</h3>
     <p>In all honesty, I don't have much experience with programming... but if you wanted to know
       some of my work history, I have done the following:</p>
@@ -41,5 +43,6 @@
       <li>Process Engineering Intern (Summer 2020, remote)</li>
       <li>Environmental Lab assistant (Jan 2020-June2020)</li>
     </ul>
+  </div>
   </body>
 </html>
